Replace loop call with stream call instead